--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
-@import "mixins.scss";
+@import "main.scss";
 @import "null.scss";
 @import "popup.scss";
+@import "fonts.scss";
 
 $brdColor: #7e1416;
 $bgColor: #192e41;
