--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,4 @@
-import "vars.scss";
-import "mixins.scss";
-import "null.scss";
-import "popup.scss";
-import "main.scss";
-import "fonts.scss";
+@import "vars.scss";
+@import "mixins.scss";
+@import "null.scss";
+@import "popup.scss";
